--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -68,17 +68,33 @@ From {{etyl|fro|pt}} {{term|abandoner|lang=fro}}, formed from {{term|à|a|at, to
 
 ===Pronunciation===
 * {{a|PT}} {{IPA|/ɐβɐ̃duˈnaɾ/|lang=pt}}
+* {{a|Brazil}} {{IPA|/a.ˌbɐ̃.do.ˈna(ʁ)/|lang=pt}}
 
 ===Verb===
 {{pt-verb|abandon|ar}}
 
-# to [[abandon]]
+# {{lb|pt|transitive}} to {{l|en|abandon}} {{gloss|to leave behind, especially something one was responsible for or associated with}}
 #* {{RQ:Harry Potter|5|pt-BR|page=75}}
 #*: Não o perdoou por '''abandonar''' o serviço em vez de seguir você.
 #*:: She didn't forgive him for abandoning his service instead of following you.
+#: {{ux|pt|O exército teve que '''abandonar''' o forte.|The army had to '''abandon''' the fort.}}
+#: {{ux|pt|A mulher '''abandonou''' seu bebé.|The woman '''abandoned''' her baby.}}
+# {{lb|pt|transitive}} to {{l|en|give up}} {{gloss|to quit an activity or attempt}}
+#: {{ux|pt|'''Abandone''' a aviação, você nunca vai ser piloto.| '''Give up''' aviation, you will never be a pilot.}}
+# {{indtr|pt|em|.pronominal}} to let oneself be controlled by; to put oneself in the hands of; to {{l|en|indulge}} in
+#: {{ux|pt|Nós nos '''abandonamos''' na tristeza.|We '''let ourselves be seized''' by sadness.}}
+#: {{ux|pt|O réu se '''abandonou''' nas mãos do advogado.|The accused '''put''' himself in his lawyer’s hands.}}
 
 ====Conjugation====
 {{pt-conj|abandon|ar}}
+
+====Synonyms====
+* {{sense|to abandon}} {{l|pt|deixar}}, {{l|pt|largar}}
+* {{sense|to give up}} {{l|pt|desistir}}, {{l|pt|largar}}, {{l|pt|[[largar mão]] [[de]]}}
+
+====Related terms====
+* {{l|pt|abandono}}
+* {{l|pt|abandonado}}
 
 ----
 
