--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -29,7 +29,7 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 * Finnish: {{t+|fi|susi}}, {{t+|fi|suutari}}
 * French: {{t|fr|[[munition]] [[non]] [[explosée]]}} {{qualifier|unexploded ordnance}}
 {{trans-mid}}
-* German: {{t+|de|Blindgänger|m}} {{qualifier|unexploded ordnance}}, {{t+|de|Versager|m}}  {{qualifier|malfunctioning detonator or cartidge}}
+* German: {{t+|de|Blindgänger|m}} {{qualifier|unexploded ordnance}}, {{t+|de|Versager|m}}  {{qualifier|malfunctioning detonator or cartridge}}
 * Japanese: {{t|ja|不発弾|tr=ふはつだん, fuhatsudan|sc=Jpan}} {{qualifier|unexploded ordnance}}
 * Russian: {{t|ru|[[неразорва́вшийся]] [[снаря́д]]|m}} {{qualifier|unexploded ordnance}}
 * Swedish: {{t+|sv|blindgångare|c}}
