--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -86,8 +86,8 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Mongolian: {{t|mn|савхи|sc=Cyrl}}, {{t+|mn|арьс|sc=Cyrl}}
 * Navajo: {{t|nv|akał}}
 * Norwegian:
+*: Bokmål: {{t|nb|lær|n}}
 *: Nynorsk: {{t|nn|lêr|n}}
-* Norwegian Bokmål: {{t|nb|lær|n}}
 * Ojibwe: {{t|oj|bashkwegin}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|кожа|f|sc=Cyrs}}
