--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -246,6 +246,24 @@ From {{etyl|en|hu}} {{term|CD|lang=en}}.
 
 ----
 
+==Romanian==
+
+===Etymology===
+{{borrowing|ro|en|CD}}.
+
+===Pronunciation===
+* {{IPA|/siˈdi/|lang=ro}}
+
+===Noun===
+{{ro-noun|n|CD-uri}}
+
+# {{l|en|CD}}, {{l|en|compact disc}}
+
+====Declension====
+{{ro-noun-n-uri|hyphen=1}}
+
+----
+
 ==Spanish==
 
 ===Noun===
