--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -246,9 +246,8 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 |title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]
 |passage=I stumbled along through the young pines and huckleberry bushes. Pretty soon I struck into a sort of path that, I cal'lated, might lead to the road I was hunting for. It twisted and turned, and, the first thing I knew, made a sudden '''bend''' around a bunch of bayberry scrub and opened out into a big clear space like a lawn.}}
 #: {{usex|There's a sharp '''bend''' in the road ahead.|lang=en}}
-# <!-- {{context|nautical|lang=en}} - Why nautical? --> Any of the various [[knot]]s which [[join]] the ends of two [[line]]s.<!-- or the end of a line into some other object; (the latter are called hitch)
-#* Note: In naval parlance, a knot involves splicing the strands of a rope.--> <!-- Again, why naval? It was common parlance. Methinks someone has been reading too much Hornblower! -->
-#: {{rfquotek|Totten}}
+# <!-- {{context|nautical|lang=en}} - Why nautical? --> Any of the various [[knot]]s which [[join]] the ends of two [[line]]s.<!-- or the end of a line into some other object; (the latter are called hitch) Note: In naval parlance, a knot involves splicing the strands of a rope.--> <!-- Again, why naval? It was common parlance. Methinks someone has been reading too much Hornblower! -->
+#* {{quote-book|year=2012|author=Percy W. Blandford|title=Practical Knots and Ropework|page=67|passage=A simpler version of the common '''bend''' with its ends in the same direction is used to join binder twine in a hay baling machine.}}
 # {{context|in the plural|medicine|diving|with ''the''|lang=en}} A [[severe]] [[condition]] caused by excessively quick [[decompression]], causing bubbles of [[nitrogen]] to form in the [[blood]]; [[decompression sickness]].
 #: {{usex|A diver who stays deep for too long must ascend very slowly in order to prevent the '''bends'''.|lang=en}}
 # {{context|heraldiccharge|lang=en}} One of the [[honourable]] [[ordinary|ordinaries]] formed by two [[diagonal]] [[line]]s drawn from the [[dexter chief]] to the [[sinister base]]; it generally occupies a [[fifth]] part of the [[shield]] if [[uncharged]], but if [[charged]] one [[third]].
