--- a/en/k/kerel.4473.wikitext
+++ b/en/k/kerel.4473.wikitext
@@ -1,6 +1,6 @@
 ==Dutch==
 ===Etymology===
-From {{inh|nl|dum|kerel}}, {{m|dum|carel}}, {{m|dum|caerl}}, {{m|dum|kerl}}, {{etyl|odt|nl}} {{m|odt|*karl}}, {{m|odt|*karal}}, {{m|odt|*keril}}, from {{etyl|frk|nl}} {{m|frk|*karil}}, {{m|frk|*karal}}, from {{etyl|gem-pro|nl}} {{m|gem-pro|*karilaz}}. Compare German {{term|Kerl|lang=de}}, Dutch Low Saxon {{term|keerl|lang=nds-nl}}, West Frisian {{term|tsjirl|lang=fy}}, English {{term|churl|lang=en}}, Danish {{term|karl|lang=da}}.
+From {{inh|nl|dum|kerel}}, {{m|dum|carel}}, {{m|dum|caerl}}, {{m|dum|kerl}}, from {{etyl|odt|nl}} {{m|odt|*karl}}, {{m|odt|*karal}}, {{m|odt|*keril}}, from {{etyl|frk|nl}} {{m|frk|*karil}}, {{m|frk|*karal}}, from {{etyl|gem-pro|nl}} {{m|gem-pro|*karilaz}}. Compare German {{term|Kerl|lang=de}}, Dutch Low Saxon {{term|keerl|lang=nds-nl}}, West Frisian {{term|tsjirl|lang=fy}}, English {{term|churl|lang=en}}, Danish {{term|karl|lang=da}}.
 
 ===Pronunciation===
 *{{audio|Nl-kerel.ogg|audio|lang=nl}}
