--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -55,6 +55,7 @@ From {{etyl|la|en}} {{m|la|minimum}}, neuter form of {{term|minimus||lang=la|lea
 * Finnish: {{t+|fi|minimi}}
 * French: {{t+|fr|minimum|m}}
 * German: {{t+|de|Minimum|n}}
+* Hebrew: {{t|he|מִינִימוּם|m|tr=minimum}}
 * Icelandic: {{t|is|lágmark|n}}
 * Italian: {{t+|it|minimo|m}}
 * Japanese: {{t+|ja|最小|tr=さいしょう, saishō|sc=Jpan}}, {{t+|ja|最低|tr=さいてい, saitei|sc=Jpan}}, {{t|ja|極小|tr=きょくしょう, kyokushō|sc=Jpan}}
