--- a/en/w/white gold.855391.wikitext
+++ b/en/w/white gold.855391.wikitext
@@ -17,6 +17,7 @@
 * Bulgarian: {{t|bg|бяло злато|n}}
 * Chinese:
 *: Mandarin: {{t+|cmn|白金|tr=báijīn|sc=Hani}}, {{t|cmn|白色黃金|sc=Hani}}, {{t|cmn|白色黄金|tr=báisè huángjīn|sc=Hani}}, {{t|cmn|白色K金|tr=báisè kei jīn|sc=Hani}}
+* Crimean Tatar: {{t|crh|aq altın}}
 * Finnish: {{t|fi|valkokulta}}
 * French: {{t+|fr|or blanc|m}}
 * German: {{t|de|Weißgold|n}}
