--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -5,7 +5,7 @@
 {{wikispecies|Sus}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|pigge||pig, pigling}} (originally a term for a young pig, with adult pigs being {{m|enm|swine}}), apparently from {{etyl|ang|en}} {{m|ang|*picga}} (attested only in compounds, such as {{m|ang|picgbrēad||mast, pig-fodder}}). Connection to early {{etyl|nl|-}} {{m|nl|bigge}} (modern {{etyl|nl|-}} {{m|nl|big||piglet}}), {{etyl|fy|-}} {{m|fy|bigge||pigling}}{{,}} and similar terms in {{etyl|gml|-}} are sometimes proposed, "but the phonology is difficult"<ref name="NED">''A new English dictionary on historical principles''</ref> and other sources say the words are "almost certainly not" related.<ref>{{R:Dictionary.com}}</ref>
+From {{etyl|enm|en}} {{m|enm|pigge||pig, pigling}} (originally a term for a young pig, with adult pigs being {{m|enm|swine}}), apparently from {{etyl|ang|en}} {{m|ang|*picga}} (attested only in compounds, such as {{m|ang|picgbrēad||mast, pig-fodder}}). Compare Middle Dutch {{m|dum|pogge}}, {{m|dum|puggen}}, {{m|dum|pegsken||pigling}}. Connection to early {{etyl|nl|-}} {{m|nl|bigge}} (modern {{etyl|nl|-}} {{m|nl|big||piglet}}), {{etyl|fy|-}} {{m|fy|bigge||pigling}}{{,}} and similar terms in {{etyl|gml|-}} are sometimes proposed, "but the phonology is difficult"<ref name="NED">''A new English dictionary on historical principles''</ref> and other sources say the words are "almost certainly not" related.<ref>{{R:Dictionary.com}}</ref>
 
 British slang sense "police officer" from at least 1785.<ref>'''2003''', Victoria Fromkin, Robert Rodman, Nina M. Hyams, ''An Introduction to Language'', [http://books.google.com.au/books?id=7PftAAAAMAAJ&q=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y page 474] — Similarly, the use of the word '''''pig''''' for “policeman” goes back at least as far as 1785, when a writer of the time called a Bow Street police officer a “China Street '''pig'''.”</ref>
 
