--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -4,7 +4,10 @@
 {{wikipedia|lang=he}}
 
 ===Etymology===
-{{rfe|lang=he}}
+In the [[Bible]], it is said to be from the name {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}} given to [[Jacob]] in {{RQ:Tanach|1|32|29}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". The personal name, already attested in {{etyl|xeb|-}} and {{etyl|uga|-}} texts<!-- as a personal name-->,<ref>Michael G. Hasel, ''Domination and Resistance: Egyptian Military Activity in the Southern Levant'' (Brill, 1998)</ref> has been variously translated as "he wrestles with God", "he prevails with God",<ref>James P. Boyd, ''Bible dictionary'' (Ottenheimer Publishers, 1958)</ref> or "God rules" (possibly from the same root {{m|he|ש־ר־ה}}/{{m|he|ש־ר־ר}} as {{m|he|שָׂרָה||Sarah}}).<ref>Victor P. Hamilton, ''The Book of Genesis: Chapters 18–50'' (NICOT, Grand Rapids: Eerdmans, 1995)</ref>
+
+[[:File:YsyriAr.gif|Line 27]] of the [[w:Merneptah Stele|Merneptah Stele]] (from about 1200 {{B.C.E.}}) is thought to contain the earliest attestation of the name ''Israel'' in any language, {{etyl|egy|-}} {{m|egy|ysrj3r}} (although alternative readings have been proposed, such as ''[[Jezreel]]''):
+: <hiero>i-i-z:Z1s*Z1s:r-i-A-r:Z1*T14-A1*B1:Z2</hiero>
 
 ===Pronunciation===
 * {{term|מְדִינַת יִשְׂרָאֵל||State of Israel|tr=medinát yisra'él|lang=he}}: {{audio|He-Medinat_Israel.ogg|Audio|lang=he}}
@@ -37,6 +40,9 @@
 ** Greek: {{l|el|Ισραήλ}}
 ** Latin: {{l|la|Isrāēl}}
 *** English: {{l|en|Israel}}
+
+====References====
+<references/>
 
 [[Category:he:Israel]]
 [[Category:he:Countries]]
