--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -50,10 +50,10 @@ Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunc
 * Portuguese: {{t+|pt|sim}}
 * Russian: {{t+|ru|ага́}}, {{t+|ru|ага́|tr=ahá}}, {{t+|ru|угу́}}, {{t+|ru|угу́|tr=uhú}}, {{t+|ru|так}}, {{t+|ru|ну}}
 * Serbo-Croatian: {{t+|sh|da}} {{t+|sh|da}}
-*: Cyrillic: {{t|sh|ја|sc=Cyrl}}
-*: Roman: {{t+|sh|ja|sc=Latn}}
+*: Cyrillic: {{t|sh|dа|sc=Cyrl}}
+*: Roman: {{t+|sh|da|sc=Latn}}
 * Slovak: {{t|sk|no}} <!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->
-* Slovene: {{t+|sl|ja}}
+* Slovene: {{t+|sl|da}}
 * Spanish: {{t+|es|sí}}
 * Swedish: {{t+|sv|ja|n}}
 * Urdu: {{t|ur|ہاں|tr=hā̃|sc=ur-Arab}}
