--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -53,7 +53,7 @@ Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunc
 *: Cyrillic: {{t|sh|dа|sc=Cyrl}}
 *: Roman: {{t+|sh|da|sc=Latn}}
 * Slovak: {{t|sk|no}} <!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->
-* Slovene: {{t+|sl|da}}
+* Slovene: {{t+|sl|ja}}
 * Spanish: {{t+|es|sí}}
 * Swedish: {{t+|sv|ja|n}}
 * Urdu: {{t|ur|ہاں|tr=hā̃|sc=ur-Arab}}
