#* '''2011''', Alessandra Lemma, ‎Mary Target, ‎Peter Fonagy, ''Brief Dynamic Interpersonal Therapy: A Clinician's Guide'' (page 124) #*: He had met his '''then''' girlfriend when he had just started university. The relationship ended unhappily when t <then#34517963>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -302,7 +302,9 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 ===Adjective===
 {{en-adj|-}}
 
-# being so at that time
+# Being so at that time.
+#* '''2011''', Alessandra Lemma, ‎Mary Target, ‎Peter Fonagy, ''Brief Dynamic Interpersonal Therapy: A Clinician's Guide'' (page 124)
+#*: He had met his '''then''' girlfriend when he had just started university. The relationship ended unhappily when the girlfriend complained that he never wanted to go out.
 
 ====Translations====
 {{trans-top|being so at that time}}
