--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -51,7 +51,7 @@ From the prefix {{m|en|mini-}}.
 * {{l|rup|mine}}
 
 ===Etymology===
-From {{etyl|la|rup}} {{m|la|mē}}, possibly through a root ''mēne'', or through analogy with {{term|tsine|lang=ro}}, from *''quene'', from {{term|quem|lang=la}}. Compare Daco-Romanian {{term|mine|lang=ro}}, also Dalmatian {{term|main|lang=dlm}}.
+From {{etyl|la|rup}} {{m|la|mē}}, possibly through a {{etyl|VL.|rup}} root ''mēne'', or through analogy with {{term|tsini|lang=ro}}, from *''quene'', from {{term|quem|lang=la}}. Compare Daco-Romanian {{term|mine|lang=ro}}, also Dalmatian {{term|main|lang=dlm}}.
 
 ===Pronoun===
 {{head|rup|pronoun}}
