t+de:[[Oszillogramm]] t-balance ([[WT:EDIT|Assisted]]) <oscillogram#34529697>

--- a/en/o/oscillogram.719990.wikitext
+++ b/en/o/oscillogram.719990.wikitext
@@ -8,8 +8,9 @@
 ====Translations====
 {{trans-top|produced by oscillograph}}
 * Bulgarian: {{t|bg|осцилограма|f}}
-{{trans-mid}}
 * Finnish: {{t|fi|oskillogrammi}}
+{{trans-mid}}
+* German: {{t+|de|Oszillogramm|n}}
 {{trans-bottom}}
 
 [[de:oscillogram]]
