/* Derived terms */ <sir#34532858>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -33,6 +33,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * [[sirrah]]
 * [[sirree]]
 * [[siree]]
+* [[nossuh]]
 
 ====Related terms====
 * [[senior]]
