--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -174,6 +174,7 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}.
 * Galician: {{t+|gl|muíño|m}}
 * Greek: {{t+|el|μύλος|m}}
 {{trans-mid}}
+* Irish: {{t|ga|muileann|m}}
 * Latvian: {{t|lv|dzirnavas|f-p}}
 * Lithuanian: {{t+|lt|malūnas|m}}
 * Norwegian:
