--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -114,7 +114,7 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}.
 * Italian: {{t+|it|mulino|m}}
 * Japanese: {{t|ja|製粉所|tr=せいふんじょ, seifunjo}}
 * Kazakh: {{t+|kk|диірмен|sc=Cyrl}}
-* Korean: {{t+|ko|방아}}, {{t+|ko|방앗간}} {{qualifier|the building}}
+* Korean: {{t+|ko|방아}}
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|ئاش}}
