--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -176,6 +176,7 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}.
 * Greek: {{t+|el|μύλος|m}}
 {{trans-mid}}
 * Irish: {{t|ga|muileann|m}}
+* Korean: {{t+|ko|방앗간|sc=Kore}}
 * Latvian: {{t|lv|dzirnavas|f-p}}
 * Lithuanian: {{t+|lt|malūnas|m}}
 * Norwegian:
