t+ga:[[muileann]] t-balance ([[WT:EDIT|Assisted]]) <mill#34533101>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -202,8 +202,9 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}.
 * German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}} {{t|de|Papiermühle|f}} {{qualifier|for paper}}
 * Greek: {{t+|el|εργοστάσιο|n}}
 * Hebrew: {{t|he|טחנה|tr=tachánah}}
-* Macedonian: {{t|mk|фа́брика|f}}, {{t|mk|по́гон|m}}, {{t|mk|работи́лница|f}}
+* Irish: {{t|ga|muileann|m}}
 {{trans-mid}}
+* Macedonian: {{t|mk|фа́брика|f}}, {{t|mk|по́гон|m}}, {{t|mk|работи́лница|f}}
 * Norwegian:
 *: Bokmål: {{t+|no|mølle|m|f}}
 *: Nynorsk: {{t|nn|mylne|f}}, {{t+|no|mølle|f}}
