--- a/en/o/orients.746836.wikitext
+++ b/en/o/orients.746836.wikitext
@@ -7,6 +7,13 @@
 
 ===Anagrams===
 * [[in store#English|in store]], [[instore#English|instore]], [[noirest#English|noirest]], [[sterino#English|sterino]], [[stonier#English|stonier]], [[tries on#English|tries on]], [[triones#English|triones]]
+----
+==Catalan==
+
+===Noun===
+{{head|ca|noun form}}
+
+# {{plural of|orient|lang=ca}}
 
 [[ca:orients]]
 [[de:orients]]
