--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -95,7 +95,9 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 
 ====Translations====
 {{trans-top|that which is considered to exist as a separate entity, object, quality or concept}}
+* Afrikaans: {{t|af|ding}}
 * Albanian: {{t+|sq|send|m}}
+* Amharic: {{t|am|ነገር|sc=Ethi}}
 * Arabic: {{t+|ar|شَيْء|m}}
 *: Egyptian Arabic: {{t|arz|شيء|m|tr=šeʾ|sc=Arab}}, {{t|arz|حاجة|f|tr=ḥaga|sc=Arab}}
 * Aragonese: {{t|an|cosa|f}}
@@ -141,8 +143,8 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Kazakh: {{t|kk|нәрсе|sc=Cyrl}}
 * Khmer: {{t+|km|របស់|tr=rɔbɑh|sc=Khmr}}
 * Korean: {{t+|ko|물건|sc=Kore}}
-* Kyrgyz: {{t+|ky|нерсе|sc=Cyrl}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|нерсе|sc=Cyrl}}
 * Ladin: {{t|lld|cossa|f}}
 * Lao: {{t|lo|ສິ່ງ|sc=Laoo}}
 * Latin: {{t+|la|rēs|f}}, {{t+|la|ens|n}}
@@ -169,6 +171,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|ствар|f}}
 *: Roman: {{t+|sh|stvar|f}}, {{t+|sh|rič|f}} (Chakavian)
+* Sinhalese: {{t|si|දෙය|sc=Sinh}}
 * Slovak: {{t|sk|vec|f}}
 * Slovene: {{t+|sl|stvar|f}}, {{t+|sl|reč|f}}
 * Sorbian:
