/* See also */ <dame#34540837>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -88,7 +88,7 @@ From {{etyl|fr|da}} {{term|dame||lady|lang=fr}}.
 * {{l|da|damet}} ("{{l|en|ladyish}}", "{{l|en|ladylike}}")
 
 ====See also====
-* {{list:playing cards/da}}
+{{table:playing cards/da}}
 * {{pedialite|lang=da}}
 * {{pedialite|Dame (kort)|lang=da}}
 
