--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -138,7 +138,7 @@ The translations below need to be checked by native speakers and inserted into t
 ====Translations====
 {{trans-top|made of bamboo}}
 * Bulgarian: {{t|bg|бамбуков}}
-* Chinese traditional/simplified: [[竹製]]的, [[竹製]]的 (zhú zhì de)
+* Chinese: {{t|zh|[[竹製]]的}}, {{t|zh|[[竹製]]的|tr=zhú zhì de}}
 * Czech: {{t+|cs|bambusový|m}}
 * Dutch: bamboe-
 * Esperanto: {{t|eo|bambua}}
