--- a/en/m/miss out.802552.wikitext
+++ b/en/m/miss out.802552.wikitext
@@ -22,15 +22,18 @@
 
 ====Translations====
 {{trans-top|to miss something that should not be missed}}
+* Arabic: {{t-needed|ar}}
 * Chinese:
 *: Mandarin: {{t|cmn|錯過|sc=Hani}}, {{t+|cmn|错过|tr=cuòguò|sc=Hani}}, {{t|cmn|放過|sc=Hani}}, {{t+|cmn|放过|tr=fàngguò|sc=Hani}}, {{t|cmn|丟掉|sc=Hani}}, {{t+|cmn|丢掉|tr=diūdiào|sc=Hani}}
 * Finnish: {{t+|fi|menettää}}, [[jäädä]] [[jostain]] {{t+|fi|paitsi}}
 * French: {{t+|fr|manquer}}, {{t+|fr|perdre}}, {{t+|fr|laisser passer}}, {{t+|fr|louper}}
-{{trans-mid}}
 * German: {{t+|de|verpassen}}, {{t+|de|verfehlen}}, {{t+|de|auslassen}}
+{{trans-mid}}
 * Japanese: {{t|ja|逃す|tr=のがす, nogasu|sc=Jpan}}
+* Korean: {{t-needed|ko}}
 * Polish: {{t+|pl|opuszczać|impf}}, {{t+|pl|opuścić|pf}}
 * Russian: {{t+|ru|упуска́ть|impf}}, {{t+|ru|упусти́ть|pf}}
+* Spanish: {{t-needed|es}}
 * Swedish: {{t+|sv|missa}}
 {{trans-bottom}}
 
