t+yi:[[marder]] ([[WT:EDIT|Assisted]]) <marten#34553819>

--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -89,6 +89,7 @@ From {{etyl|enm|en}} {{m|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} 
 * Ukrainian: {{t|uk|куни́ця|f}}
 * Welsh: {{t|cy|bele}}
 * West Frisian: {{t|fy|marter}}
+* Yiddish: {{t|yi|marder|m|tr=márder|alt=מאַרדער|sc=Hebr}}
 {{trans-bottom}}
 
 ====See also====
