--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -48,13 +48,14 @@ From 16th century {{term|cole-florye|lang=en}}. Compare Latin {{term|caulis|lang
 * German: {{t+|de|Blumenkohl|m}}, {{qualifier|Austria}} {{t+|de|Karfiol|m}}
 * Greek: {{t+|el|κουνουπίδι|n}}, {{t+|el|ανθοκράμβη|f|sc=Grek}}
 * Greenlandic: {{t|kl|blomkåli}}
+* Hindi: {{t|hi|फूल गोभी|sc=Deva}}
 * Hungarian: {{t+|hu|karfiol}}
 * Icelandic: {{t+|is|blómkál|n}}
 * Ido: {{t+|io|florkaulo}}
 * Indonesian: {{t|id|blumkol}}, {{t+|id|kubis bunga}}, {{t+|id|kembang kol}}
-{{trans-mid}}
 * Irish: {{t|ga|cóilis|f}}
 * Italian: {{t+|it|cavolfiore|m}}
+{{trans-mid}}
 * Japanese: {{t|ja|カリフラワー|tr=karifurawā}}, {{t|ja|花野菜|tr=hanayasai}}, {{t|ja|花甘藍|tr=hanakanran}}, {{t|ja|花キャベツ|tr=hanakyabetsu}}
 * Norman: {{t|nrf|chou-flieur|m}}
 * Korean: {{t|ko|꽃양배추|tr=kkotyangbaechu|sc=Hang}}
