--- a/en/i/industrial output.7358.wikitext
+++ b/en/i/industrial output.7358.wikitext
@@ -7,10 +7,13 @@
 
 ====Translations====
 {{trans-top|what an industry produces}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
 * Dutch: {{t|nl|industriële produktie|f}}
-* Finnish: {{t+|fi|teollisuustuotanto}}
 {{trans-mid}}
+* Finnish: {{t+|fi|teollisuustuotanto}}
 * French: {{t|fr|production industrielle|f}}
+* Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
 [[et:industrial output]]
