--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -76,8 +76,8 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * Latgalian: {{t|ltg|iudrys|m}}
 * Latin: {{t|la|lutra|f}}
 * Latvian: {{t|lv|ūdrs|m}}
-{{trans-mid}}
 * Lithuanian: {{t+|lt|ūdra|f}}
+{{trans-mid}}
 * Lun Bawang: {{t|lnd|dengen}}
 * Macedonian: {{t|mk|видра|f}}
 * Malay:
@@ -95,6 +95,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 *: Digor: {{t|os|урдӕ|sc=Cyrl}}
 *: Iron: {{t|os|уырд|sc=Cyrl}}
 * Persian: {{t|fa|سمور آبی|tr=samur-e âbi|sc=fa-Arab}}
+* Pirahã: {{t|myp|pibaóí}}
 * Polish: {{t+|pl|wydra|f}}
 * Portuguese: {{t+|pt|lontra}}
 * Romanian: {{t+|ro|lutră|f}}, {{t+|ro|vidră|f}}
