--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -237,6 +237,7 @@ From {{etyl|enm|en}} {{m|enm|at}}, from {{etyl|ang|en}} {{m|ang|æt||at, near, b
 * Polish: {{t+|pl|małpa|f}}
 * Russian: {{t|ru|соба́чка}}
 * Spanish: {{t|es|arroba|}}
+* Swedish: {{t+|sv|snabel-a|n}}
 * Vietnamese: {{t|vi|a còng}} {{qualifier|Northern}}, {{t|vi|a móc}} {{qualifier|Southern}}
 {{trans-bottom}}
 
