t+ru:[[промышленное производство]] ([[WT:EDIT|Assisted]]) <industrial output#34558479>

--- a/en/i/industrial output.7358.wikitext
+++ b/en/i/industrial output.7358.wikitext
@@ -13,7 +13,7 @@
 {{trans-mid}}
 * Finnish: {{t+|fi|teollisuustuotanto}}
 * French: {{t|fr|production industrielle|f}}
-* Russian: {{t-needed|ru}}
+* Russian: {{t|ru|промы́шленное произво́дство|n|sc=Cyrl}}
 {{trans-bottom}}
 
 [[et:industrial output]]
