/* Synonyms */ denotation of Internet slang <anarcho-capitalism#34559593>

--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -12,7 +12,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 *{{l/en|anarcho-capitalist}}
 
 ===Synonyms===
-* [[ancap]], {{l/en|anti-state capitalism}}, {{l/en|anti-state marketism}}, {{l/en|capitalist anarchism}}, {{l/en|private property anarchism}}, {{l/en|stateless capitalism}}
+* [[ancap]] (chiefly an Internet slang), {{l/en|anti-state capitalism}}, {{l/en|anti-state marketism}}, {{l/en|capitalist anarchism}}, {{l/en|private property anarchism}}, {{l/en|stateless capitalism}}
 
 ====Translations====
 {{trans-top|philosophy that advocates the elimination of the state and a self-regulating free market}}
