--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -67,7 +67,7 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Irish: {{t|ga|leathar|m}}
 *: Old Irish: {{t|sga|lethar}}
 * Italian: {{t+|it|cuoio|m}}
-* Japanese: {{t|ja|皮革|tr=ひかく, hikaku|sc=Jpan}}, {{t+|ja|皮|tr=かわ, kawa|sc=Jpan}}
+* Japanese: {{t|ja|皮革|tr=ひかく, hikaku|sc=Jpan}}, {{t+|ja|革|tr=かわ, kawa|sc=Jpan}}
 * Karachay-Balkar: {{t|krc|тери|sc=Cyrl}}
 * Kazakh: {{t+|kk|тері|sc=Cyrl}}, {{t|kk|көн|sc=Cyrl}}
 * Khmer: {{t+|km|ស្បែក|tr=sbaek|sc=Khmr}}, {{t|km|ស្បែកសត្វ|tr=sbaek sat|sc=Khmr}}
