--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -1,6 +1,6 @@
 {{also|ישׂראל}}
 ==Hebrew==
-{{wikipedia|lang=he}}
+{{slim-wikipedia|lang=he}}
 
 ===Etymology===
 In the [[Bible]], it is said to be from the name {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}} given to [[Jacob]] in {{RQ:Tanach|1|32|29}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". The personal name, already attested in {{etyl|xeb|-}} and {{etyl|uga|-}} texts<!-- as a personal name-->,<ref>Michael G. Hasel, ''Domination and Resistance: Egyptian Military Activity in the Southern Levant'' (Brill, 1998)</ref> has been variously translated as "he wrestles with God", "he prevails with God",<ref>James P. Boyd, ''Bible dictionary'' (Ottenheimer Publishers, 1958)</ref> or "God rules" (possibly from the same root {{m|he|ש־ר־ה}}/{{m|he|ש־ר־ר}} as {{m|he|שָׂרָה||Sarah}}).<ref>Victor P. Hamilton, ''The Book of Genesis: Chapters 18–50'' (NICOT, Grand Rapids: Eerdmans, 1995)</ref>
