--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -7,14 +7,17 @@
 * [[count-down]]
 
 ===Etymology===
-{{compound|count|down|lang=en}}
+From {{compound|count|down|lang=en}}.
+
+===Pronunciation===
+* {{a|noun}} {{IPA|/ˈkaʊntˌdaʊn/|lang=en}}
 
 ===Noun===
 {{en-noun}}
 
-# A [[count]] [[backward]] in fixed units to the [[time]] of some [[event]], especially the [[launch]] of a [[space]] [[vehicle]]
-# The acts of [[preparation]] carried out during this period
-# {{context|slang|lang=en}} A radio or television [[program]] counting down the top songs of a given week, usually in reverse order ending with the No. 1.
+# A [[count]] [[backward]] in fixed units to the [[time]] of some [[event]], especially the [[launch]] of a [[space]] [[vehicle]].
+# The acts of [[preparation]] carried out during this period.
+# A radio or television [[program]] counting down the top songs of a given week, usually in reverse order ending with the No. 1.
 
 ====Translations====
 {{trans-top|a count backward to the time of some event}}
@@ -59,20 +62,10 @@
 ===Verb===
 {{head|en|verb}}
 
-# {{context|nonstandard|lang=en}} To [[count down]]
+# {{rfv-sense|lang=en}} {{context|nonstandard|lang=en}} To [[count down]].
 
 ====Translations====
-{{trans-top|to count down}}
-* Chinese:
-*: Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]])
-* Dutch: {{t+|nl|aftellen}}
-* French: {{t+|fr|décompter}}
-{{trans-mid}}
-* Macedonian: {{t|mk|одбројува|tr=odbrójuva|sc=Cyrl}}
-* Portuguese: [[fazer]] a [[contagem regressiva]]
-* Slovene: {{t|sl|odštevati}}
-* Swedish: {{t|sv|räkna ned}}
-{{trans-bottom}}
+{{trans-see|count down}}
 
 [[Category:en:Time]]
 
