--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -35,6 +35,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Malay: {{t|ms|pendaraban}}
 * Manx: {{t|gv|yl-raghey|m}}
 * Maori: {{t|mi|whakareanga}}
+* Nogai: {{t|nog|керелев|tr=kerelev}}
 * Norwegian:
 *: Bokmål: {{t+|nb|multiplikasjon|m}}
 *: Nynorsk: {{t|nn|multiplikasjon|m}}
