--- a/en/c/conchas.746274.wikitext
+++ b/en/c/conchas.746274.wikitext
@@ -32,6 +32,13 @@
 {{head|pt|noun plural form}}
 
 # {{plural of|concha|lang=pt}}
+----
+==Spanish==
+
+===Noun===
+{{head|es|noun form}}
+
+# {{plural of|concha|lang=es}}
 
 [[ca:conchas]]
 [[cs:conchas]]
