--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -34,6 +34,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * [[sirree]]
 * [[siree]]
 * [[nossuh]]
+* [[yessuh]]
 
 ====Related terms====
 * [[senior]]
