/* Derived terms */ <bound#34846334>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -47,6 +47,7 @@ See [[bind]]
 =====Derived terms=====
 * [[bound to]]
 * [[I'll be bound]]
+* {{l|en|railbound}}
 
 =====Translations=====
 {{trans-top|obliged to}}
