--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -40,7 +40,7 @@ See [[bind]]
 # {{context|linguistics|of a [[morpheme]]|lang=en}} That cannot stand alone as a free word.
 # {{context|mathematics|logic|of a [[variable]]|lang=en}} [[constrained|Constrained]] by a [[quantifier]].
 # {{context|dated|lang=en}} [[constipated]]; [[costive]]
-# Confined or restricted to a certain place: e.g. [[railbound]]
+# Confined or restricted to a certain place; e.g. [[railbound]].
 # Unable to move in certain conditions; e.g. [[snowbound]].
 
 =====Antonyms=====
