--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -215,7 +215,7 @@ The suffix to be used is determined by [[w:vowel harmony|vowel harmony]]. If the
 * {{l|pis|-im}}
 
 ===Etymology===
-{{etyl|en|pis}} {{term|him|lang=en}}, {{term|'em}}
+{{etyl|en|pis}} {{term|him|lang=en}}, {{term|'em|lang=pis}}
 
 ===Suffix===
 {{head|pis|suffix}}
