[[User:Daniel Carrero/term cleanup|term cleanup]] <CD#34874603>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -94,7 +94,7 @@ Abbreviation of various terms and phrases.
 ===Particle===
 {{head|en|particle}}
 
-# {{non-gloss definition|An abbreviation found on decals of automobiles, indicating that they are used by diplomats. From the French phrase {{term|corps diplomatique||[[diplomatic]] [[corps]]}}.|lang=fr}}
+# {{non-gloss definition|An abbreviation found on decals of automobiles, indicating that they are used by diplomats. From the French phrase {{term|corps diplomatique||[[diplomatic]] [[corps]]|lang=fr}}.|lang=fr}}
 
 ===Anagrams===
 * [[DC#English|DC]], [[Dc#English|Dc]], [[dc#English|dc]]
