--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -211,10 +211,10 @@ From {{etyl|gmh|de}} {{m|gmh|rōt||red, red-haired}}, from {{etyl|goh|de}} {{m|g
 # {{context|historical|possibly offensive|lang=de}} [[Indian]] (pertaining to the [[Native American]]s)
 
 ====Declension====
-; declension with umlaut
+; Comparation with umlaut
 {{de-decl-adj|rot|röter|rötest}}
 
-; declension without umlaut
+; Comparation without umlaut
 {{de-decl-adj|rot|roter|rotest}}
 
 ====Derived terms====
