--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -204,8 +204,8 @@ From {{etyl|gmh|de}} {{m|gmh|rōt||red, red-haired}}, from {{etyl|goh|de}} {{m|g
 ===Adjective===
 {{de-adj|röter|comp2=roter|rötesten|sup2=rotesten}}
 
-# [[red]]
-# {{context|politics|lang=de}} pertaining to [[Marxism]] in the widest sense; [[social democratic]]; [[socialist]]; [[communist]]
+# [[red]] {{gloss|colour}}
+# {{context|politics|lang=de}} [[red]]; pertaining to [[Marxism]] in the widest sense; [[social democratic]]; [[socialist]]; [[communist]]
 # {{context|politics|Germany|in particular|lang=de}} pertaining to the social democratic [[w:SPD|SPD]] or the more rigidly socialist [[w:Die Linke|Linke]]
 # {{context|possibly mildly|_|offensive}} [[red-haired]]
 # {{context|historical|possibly offensive|lang=de}} [[redskin]]; [[Native American]]; [[Indian]]
