--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -206,7 +206,7 @@ From {{etyl|gmh|de}} {{m|gmh|rōt||red, red-haired}}, from {{etyl|goh|de}} {{m|g
 
 # [[red]] {{gloss|colour}}
 # {{context|politics|lang=de}} [[red]]; pertaining to [[Marxism]] in the widest sense; [[social democratic]]; [[socialist]]; [[communist]]
-# {{context|politics|Germany|in particular|lang=de}} pertaining to the social democratic [[w:SPD|SPD]] or the more rigidly socialist [[w:Die Linke|Linke]]
+# {{context|politics|Germany|in particular|lang=de}} pertaining to the social democratic [[w:SPD|SPD]] or the more rigidly socialist [[w:The Left (Germany)|Linke]]
 # {{context|possibly mildly|_|offensive}} [[red-haired]]
 # {{context|historical|possibly offensive|lang=de}} [[redskin]]; [[Native American]]; [[Indian]]
 
