--- a/en/s/sausage meat.776070.wikitext
+++ b/en/s/sausage meat.776070.wikitext
@@ -4,4 +4,14 @@
 {{en-noun|~}}
 
 # Ground, spiced meat that can be stuffed in a [[sausage]] or used as a sausage [[patty]].
+
+====Translations====
+{{trans-top|ground spiced meat that can be stuffed in a sausage}}
+* Chinese: 
+*: Mandarin: {{t-needed|cmn}}
+{{trans-mid}}
+* Finnish: {{t-needed|fi}}
+* Russian: {{t-needed|ru}}
+{{trans-bottom}}
+
 [[Category:en:Sausages]]
