--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -32,7 +32,7 @@ From the {{w|Gerber}} Childrenswear brand name {{w|Onesies}}. The name became [[
 
 {{trans-top|adult jumpsuit}}
 * Chinese:
-*: Mandarin: {{t-needed|cmn}}
+*: Mandarin: {{t|cmn|連體服}}, {{t|cmn|连体服|tr=liántǐfú}}
 * Dutch: {{t+|nl|romper|m}}
 {{trans-mid}}
 * Finnish: {{t+|fi|haalari}}
