--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -17,7 +17,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 * {{l/en|tinder}}
 
 ===Etymology 2===
-From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from {{etyl|fro|en}} {{term|atendre||to attend, listen|lang=fro}}, from {{etyl|la|en}} {{term|attendere||to stretch toward, give heed to|lang=la}}, from {{term|ad||to}} + {{term|tendere||to stretch}}; see [[tend]] and compare [[attempt]].
+From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from {{etyl|fro|en}} {{term|atendre||to attend, listen|lang=fro}}, from {{etyl|la|en}} {{term|attendere||to stretch toward, give heed to|lang=la}}, from {{m|la|ad||to}} + {{m|la|tendere||to stretch}}; see [[tend]] and compare [[attempt]].
 
 ====Verb====
 {{en-verb}}
@@ -25,8 +25,8 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 # {{context|archaic|transitive|lang=en}} To [[listen]] to (something or someone); to pay attention to; regard; heed. {{defdate|from 15th c.}}
 #* Sir {{w|Philip Sidney}} (1554-1586)
 #*: The diligent pilot in a dangerous tempest doth not '''attend''' the unskilful words of the passenger.
-# {{context|archaic|intransitive|lang=en}} To [[listen]] ({{term|to}}, {{term|unto}}). {{defdate|from 15th c.}}
-# {{senseid|en|to turn one's consideration to, deal with}}{{context|intransitive|lang=en}} To turn one's [[consideration]] ({{term|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}}
+# {{context|archaic|intransitive|lang=en}} To [[listen]] ({{m|en|to}}, {{m|en|unto}}). {{defdate|from 15th c.}}
+# {{senseid|en|to turn one's consideration to, deal with}}{{context|intransitive|lang=en}} To turn one's [[consideration]] ({{m|en|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}}
 #: {{usex|lang=en|Secretaries '''attend''' to correspondence.}}
 #* {{quote-book|year=1918|author={{w|W. B. Maxwell}}|chapter=15
 |title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]
