--- a/en/s/sausage meat.776070.wikitext
+++ b/en/s/sausage meat.776070.wikitext
@@ -10,7 +10,7 @@
 * Chinese: 
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|makkaramassa}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
