t+cs:[[bublina]] ([[WT:EDIT|Assisted]]) <bubble#34996144>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -233,6 +233,7 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 
 {{trans-top|period of intense speculation in a market}}
 * Catalan: {{t|ca|bombolla|f}}
+* Czech: {{t|cs|bublina|f}}
 * Dutch: {{t+|nl|bel|f}}
 * Finnish: {{t|fi|kupla}}
 * French: {{t+|fr|bulle|f}}
