/* English */ <wah lau#35037314>

--- a/en/w/wah lau.720445.wikitext
+++ b/en/w/wah lau.720445.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Alternative forms===
+* {{l|en|wahlau}}
+
 ===Etymology===
 Said to be from {{etyl|nan-hok|en}} {{zh-l|[[我]][[老爸]]|tr=góa lāu-pē}}, which literally means "my father".
 
