[[User:Daniel Carrero/term cleanup|term cleanup]] <crook#35046615>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -120,7 +120,7 @@ From {{etyl|enm|en}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{ety
 {{trans-bottom}}
 
 ===Etymology 2===
-From {{term|crooked||dishonestly come by}}. <ref>[http://andc.anu.edu.au/australian-words/meanings-origins?field_alphabet_value=81 Australian National Dictionary Centre Home » Australian words » Meanings and origins of Australian words and idioms » C]</ref>
+From {{m|en|crooked||dishonestly come by}}. <ref>[http://andc.anu.edu.au/australian-words/meanings-origins?field_alphabet_value=81 Australian National Dictionary Centre Home » Australian words » Meanings and origins of Australian words and idioms » C]</ref>
 
 ====Adjective====
 {{en-adj}}
