t+pt:[[Iónia]] t+pt:[[Iônia]] ([[WT:EDIT|Assisted]]) <Ionia#35197556>

--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -23,6 +23,7 @@ From {{etyl|grc|en}} {{m|grc|Ἰωνία}}.
 {{trans-mid}}
 * Latin: {{t|la|Iōnia|f}}
 * Old Persian: {{t|peo|𐎹𐎢𐎴|tr=Yauna|sc=Xpeo}}
+* Portuguese: {{t|pt|Iónia|f}} {{qualifier|Portugal}}, {{t|pt|Iônia|f}} {{qualifier|Brazil}}
 {{trans-bottom}}
 
 [[Category:en:Cities]]
