t+tr:[[en az]] ([[WT:EDIT|Assisted]]) <minimum#35216213>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -68,6 +68,7 @@ From {{etyl|la|en}} {{m|la|minimum}}, neuter form of {{term|minimus||lang=la|lea
 * Spanish: {{t+|es|mínimo}}
 * Swedish: {{t+|sv|minimum|n}}
 * Telugu: {{t|te|కనిష్టం|tr=kanishTaM}}
+* Turkish: {{t|tr|en az}}
 * Vietnamese: {{t+|vi|tối thiểu}}
 * Volapük: {{t|vo|minum}}
 {{trans-bottom}}
