--- a/en/l/Laz.774545.wikitext
+++ b/en/l/Laz.774545.wikitext
@@ -12,6 +12,7 @@
 * Laz: {{t|lzz|ლაზური ნენა}}
 {{trans-mid}}
 * Russian: {{t+|ru|ла́зский|m}}
+* Swedish: {{t+|sv|laziska|c}}
 {{trans-bottom}}
 
 ===External links===
