--- a/en/m/Man U.802678.wikitext
+++ b/en/m/Man U.802678.wikitext
@@ -3,4 +3,4 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{abbreviation-old|en}} of [[w:Manchester United F.C.|Manchester United Football Club]]
+# {{abbreviation of|{{w|Manchester United F.C.|Manchester United Football Club}}|lang=en}}
