--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -3,11 +3,11 @@
 ===Adverb===
 {{en-adv|-}}
 
-# [[despite|Despite]] the contrary.
+# [[in spite of|In spite of]] the previous remark.
 #: ''His ideas are all wrong. '''Even so''', I want to agree with him.''
 
 ====Translations====
-{{trans-top|despite the contrary}}
+{{trans-top|in spite of the previous remark}}
 * Catalan: {{t|ca|tot i així}}, {{t|ca|tot i això}}
 * Dutch: {{t+|nl|desondanks}}, {{t|nl|zelfs dan}}, {{t+|nl|toch}}
 * Finnish: {{t|fi|siitä huolimatta}}
