--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -3,11 +3,32 @@
 ===Adverb===
 {{en-adv|-}}
 
-# [[in spite of|In spite of]] the previous remark.
+# [[in spite of|In spite of]] the [[precede|preceding]] remark or facts.
 #: ''His ideas are all wrong. '''Even so''', I want to agree with him.''
+#* '''1928''', {{w|D. H. Lawrence}}, ''Lady Chatterley's Lover'', ch. 4:
+#*: "What's wrong with rabbits? Are they any worse than a neurotic, revolutionary humanity, full of nervous hate?"
+#*: "But we're not rabbits, '''even so'''," said Hammond.
+#* '''1997''' Feb. 13, Scot Woods, "[http://content.time.com/time/nation/article/0,8599,7666,00.html The Not-So Friendly Skies]," ''Time'' <small>(retrieved 27 Oct 2015)</small>:
+#*: [T]he American Airlines pilots union softened its stand and offered to accept lower wages for flying smaller "regional jets." '''Even so''', airline management rejected the offer.
+#* '''2009''' Dec. 25, {{w|Paul Krugman}}, "[http://www.nytimes.com/2009/12/25/opinion/25krugman.html Tidings of Comfort]," ''New York Times'' <small>(retrieved 27 Oct 2015)</small>:
+#*: But reform legislation enacted in 2010 . . . created a system of subsidies to help families pay for coverage. '''Even so''', insurance doesn’t come cheap.
+# {{label|en|archaic}} [[truly|Truly]] the case; in [[exactly]] such a manner; of exactly such a nature.
+#* {{circa|1598}} {{w|William Shakespeare}}, ''King Henry V'', act 4, sc 1:
+#*: ''Pistol:'' Trail'st thou the puissant pike?
+#*: ''King Henry V:'' '''Even so'''. What are you?
+#* '''1850''', {{w|Nathaniel Hawthorne}}, ''The Scarlet Letter'', ch. 17:
+#*: "Hester! Hester Prynne!', said he; "is it thou? Art thou in life?"
+#*: "'''Even so'''," she answered.
+#* '''1857''', {{w|Herman Melville}}, ''The Confidence Man'', ch. 14:
+#*: He may be thought inconsistent, and '''even so''' he is.
+#* '''1895''', {{w|Kenneth Grahame}}, ''The Golden Age'', ch. 13:
+#*: What a strange thing, I mused, was this smoking, that takes a man suddenly, be he in the court, the camp, or the grove, grips him like an Afreet, and whirls him off to do its imperious behests! Would it be '''even so''' with myself, I wondered, in those unknown grown-up years to come?
+
+====Synonyms====
+* {{sense|in spite of the preceding remark or facts}} [[nevertheless]]
 
 ====Translations====
-{{trans-top|in spite of the previous remark}}
+{{trans-top|in spite of the preceding remark or facts}}
 * Catalan: {{t|ca|tot i així}}, {{t|ca|tot i això}}
 * Dutch: {{t+|nl|desondanks}}, {{t|nl|zelfs dan}}, {{t+|nl|toch}}
 * Finnish: {{t|fi|siitä huolimatta}}
