/* Derived terms */ [[brown rot]] <rot#35292570>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -28,6 +28,7 @@ From {{etyl|enm|en}} {{m|enm|rotten}}, {{m|enm|roten}}, from {{etyl|ang|en}} {{m
 # {{context|transitive|lang=en}} To expose, as flax, to a process of [[maceration]], etc., for the purpose of separating the [[fiber]]; to [[ret]].
 
 ====Derived terms====
+* [[brown rot]]
 * [[potter's rot]]
 
 ====Translations====
