t+it:[[sì]] t+it:[[vai]] t+it:[[evvai]] t+it:[[evviva]] t-balance ([[WT:EDIT|Assisted]]) <yeah#35319104>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -65,6 +65,7 @@ Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunc
 {{trans-top|expressing joy}}
 * Finnish: {{t+|fi|joo}}
 * French: {{t+|fr|ouais}}
+* Italian: {{t+|it|sì}}, {{t+|it|vai}}, {{t+|it|evvai}}, {{t|it|evviva}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|é!}}, {{t|pt|isso aí!}}
 * Russian: {{t+|ru|да!}}, {{t+|ru|ура́!}}, {{t|ru|э-ге́й!}}
