--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -89,7 +89,7 @@ cara.com/boullie/boullie/hmt
 * Dutch: {{t+|nl|euh}}
 * Finnish: {{t|fi|jee}}
 {{trans-mid}}
-* Italian: {{t+|it|sì}}
+* Italian: {{t+|it|sì}}, {{t+|it|vai}}
 * Japanese: {{t|ja|やった}} (yatta)
 {{trans-bottom}}
 
