[[User:Daniel Carrero/term cleanup|term cleanup]] <Olympus Mons#35319306>

--- a/en/o/Olympus Mons.854983.wikitext
+++ b/en/o/Olympus Mons.854983.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Named in 1973 after the [[albedo feature]] {{term|Nix Olympica||Snows of Olympus}}.
+Named in 1973 after the [[albedo feature]] {{m|en|Nix Olympica||Snows of Olympus}}.
 
 {{wikipedia}}
 
