--- a/en/d/doncella.803303.wikitext
+++ b/en/d/doncella.803303.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|es|en}}, literally "maid". Compare {{term|damsel}}.
+{{etyl|es|en}}, literally "maid". Compare {{m|en|damsel}}.
 
 ===Noun===
 {{en-noun}}
