--- a/en/e/engraft.773715.wikitext
+++ b/en/e/engraft.773715.wikitext
@@ -5,7 +5,7 @@
 * {{l|en|engraff}} {{qualifier|obsolete}}
 
 ===Etymology===
-From earlier {{term|ingraft}}, equivalent to {{prefix|en|gloss1=in|graft|lang=en}}.
+From earlier {{m|en|ingraft}}, equivalent to {{prefix|en|gloss1=in|graft|lang=en}}.
 
 ===Pronunciation===
 {{rfp|lang=en}}
