--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -11,7 +11,7 @@
 * {{rhymes|ɛnɪt|lang=en}}
 
 ===Etymology 1===
-From {{etyl|xno|en}} {{term|genette|lang=fro}}, {{etyl|frm|en}} {{term|genette|lang=frm}}, {{term|jenette}} et al., of uncertain origin.
+From {{etyl|xno|en}} {{term|genette|lang=fro}}, {{etyl|frm|en}} {{term|genette|lang=frm}}, {{m|frm|jenette}} et al., of uncertain origin.
 
 ====Noun====
 {{en-noun}}
