[[User:Daniel Carrero/term cleanup|term cleanup]] <grow op#35325439>

--- a/en/g/grow op.746562.wikitext
+++ b/en/g/grow op.746562.wikitext
@@ -4,7 +4,7 @@
 * [[grow-op]]
 
 ===Etymology===
-1998. Abbreviation of {{term|grow operation}}.
+1998. Abbreviation of {{m|en|grow operation}}.
 
 ===Noun===
 {{en-noun|head=[[grow]] [[op]]}}
