--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -250,6 +250,15 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 #* {{quote-news|year=2015|date=September 12|author=|title=Más que un club|work=El País|url=http://ccaa.elpais.com/ccaa/2015/09/12/catalunya/1442085356_203553.html
 |passage=Albiol regatea la caseta de Ciudadanos y llega al área de la de Sociedad Civil Catalana, otra ONG no-nacionalista, sobre la que el periodista Jordi Borràs, por cierto, acaba de sacar articulazo vinculando a su '''staff''' con la extrema derecha, ese equipo.}}
 
+----
+
+==Spanish==
+
+===Noun===
+{{head|es|noun|g=m}}
+
+# {{l|en|staff}} {{gloss|employees}}
+
 [[ang:staff]]
 [[ca:staff]]
 [[cy:staff]]
