--- a/en/b/barracking.855677.wikitext
+++ b/en/b/barracking.855677.wikitext
@@ -5,6 +5,13 @@
 
 # {{present participle of|barrack|lang=en|nocat=1}}
 
+===Noun===
+{{en-noun}}
+
+# An act of jeering or heckling.
+#* '''2012''', Rob White, ‎Julie Welch, ''The Ghost: In Search of My Father the Football Legend'' (page 106)
+#*: It's the sort of mindset in which you don't take in the words of praise, only the boss's criticism and the '''barrackings''' of the crowd.
+
 [[de:barracking]]
 [[et:barracking]]
 [[fr:barracking]]
