[[User:Daniel Carrero/term cleanup|term cleanup]] <incrust#35345518>

--- a/en/i/incrust.741077.wikitext
+++ b/en/i/incrust.741077.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|fr|en}} {{term|incruster|lang=fr}}, from {{etyl|la|en}} {{term|incrustare}}; prefix {{term|in-}} in + {{term|crustare}} to cover with a crust. See {{term|crust}}.
+From {{etyl|fr|en}} {{term|incruster|lang=fr}}, from {{etyl|la|en}} {{m|la|incrustare}}; prefix {{m|la|in-||in}} + {{m|la|crustare||to cover with a crust}}. See {{m|en|crust}}.
 
 ===Verb===
 {{en-verb}}
