t+fr:[[amict]] t-balance ([[WT:EDIT|Assisted]]) <amice#35358447>

--- a/en/a/amice.720080.wikitext
+++ b/en/a/amice.720080.wikitext
@@ -12,8 +12,9 @@
 
 ====Translations====
 {{trans-top|hood, or cape with a hood, formerly worn by the clergy}}
-* Portuguese: {{t|pt|amicto|m}}
+* French: {{t+|fr|amict|m}}
 {{trans-mid}}
+* Portuguese: {{t|pt|amicto|m}}
 {{trans-bottom}}
 
 {{Webster 1913}}
