--- a/en/l/lexer.775133.wikitext
+++ b/en/l/lexer.775133.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{suffix|lex|er|lang=en}}, ultimately from {{term|lexical}}.
+{{suffix|lex|er|lang=en}}, ultimately from {{m|en|lexical}}.
 
 ===Noun===
 {{en-noun}}
