--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -5,7 +5,7 @@
 From the {{etyl|grc|el}} {{term|Ἰσραήλ|Ἰσρᾱήλ|Israel|lang=grc}}.
 
 ===Pronunciation===
-* {{IPA|[izaˈil]|lang=el}}
+* {{IPA|[izɾaˈil]|lang=el}}
 * {{hyphenation|Ισ|ρα|ήλ|lang=el}}
 
 ===Proper noun===
