--- a/en/s/satirised.774832.wikitext
+++ b/en/s/satirised.774832.wikitext
@@ -4,7 +4,13 @@
 {{head|en|verb form}}
 
 # {{en-past of|satirise}}
+====Translations====
+{{trans-top}}
+* Romanian: {{t|ro|satirizat}}
 
+{{trans-mid}}
+
+{{trans-bottom}}
 [[de:satirised]]
 [[hu:satirised]]
 [[mg:satirised]]
