--- a/en/s/satirised.774832.wikitext
+++ b/en/s/satirised.774832.wikitext
@@ -6,7 +6,7 @@
 # {{en-past of|satirise}}
 ====Translations====
 {{trans-top}}
-* Romanian: {{t|ro|satirizat}}
+* Romanian: {{t|ro|satirizat}} (past participle of [[satiriza]])
 
 {{trans-mid}}
 
