Portuguese entry (semi-automated). <burqa#35365382>

--- a/en/b/burqa.803246.wikitext
+++ b/en/b/burqa.803246.wikitext
@@ -32,6 +32,15 @@
 
 ----
 
+==Portuguese==
+
+===Noun===
+{{pt-noun|f|s}}
+
+# {{alternative spelling of|burca|lang=pt}}
+
+----
+
 ==Spanish==
 
 ===Noun===
