--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -90,10 +90,10 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 {{en-noun}}
 
 # A fraudulent [[healer]] or [[incompetent]] professional, especially a [[doctor]] of [[medicine]]; an [[impostor]] who claims to have qualifications to practice [[medicine]].
-#: ''That doctor is nothing but a lousy '''quack'''!''
-#: '''Polly''' (to security guard, referring to Dr. Feingarten): Are you going to let that shyster in there?
-#: '''Dr. Feingarten''': I could sue you, Polly. A shyster is a disreputable lawyer. I'm a '''quack'''.
-#: - From the motion picture ''[[w:S.O.B. (film)|SOB]]''
+#*: ''That doctor is nothing but a lousy '''quack'''!''
+#*: '''Polly''' (to security guard, referring to Dr. Feingarten): Are you going to let that shyster in there?
+#*: '''Dr. Feingarten''': I could sue you, Polly. A shyster is a disreputable lawyer. I'm a '''quack'''.
+#*: - From the motion picture ''[[w:S.O.B. (film)|SOB]]''
 #* '''1662''': ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
 #*: Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
 #* '''1720''': William Derham, ''Physico-theology''
