--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -95,7 +95,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Italian: {{t+|it|approfittare}}
 * Latin: {{t|la|carpo}}
 * Norwegian: {{t|no|gripe}}
-* Portuguese: {{t+|pt|aproveitar}}, {{t|pt|valer-se de}}
+* Portuguese: {{t+|pt|aproveitar}}, {{t|pt|[[valer]]-[[se]] [[de]]}}
 * Spanish: {{t+|es|tomar}}, {{t+|es|aprovechar|alt=aprovercharse de}}
 {{trans-bottom}}
 
@@ -109,13 +109,13 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 
 {{trans-top|to have a sudden and powerful effect upon}}
 {{trans-mid}}
-* Portuguese: {{t+|pt|tomar conta de}}, {{t|pt|apoderar-se de}}
+* Portuguese: {{t+|pt|[[tomar conta]] [[de]]}}, {{t|pt|[[apoderar]]-[[se]] [[de]]}}
 {{trans-bottom}}
 
 {{trans-top|to have a seizure}}
 * Czech: {{t|cs|mít záchvat|impf}}, {{t|cs|dostat záchvat|pf}}
 {{trans-mid}}
-* Portuguese: {{t+|pt|convulsionar}}, {{t+|pt|convulsionar-se}}, {{t+|pt|convulsar}}, {{t+|pt|convelir}},
+* Portuguese: {{t+|pt|convulsionar}}, {{t+|pt|[[convulsionar]]-[[se]]}}, {{t+|pt|convulsar}}, {{t+|pt|convelir}},
 {{trans-bottom}}
 
 ===References===
