--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -72,9 +72,9 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Kazakh: {{t+|kk|тері|sc=Cyrl}}, {{t|kk|көн|sc=Cyrl}}
 * Khmer: {{t+|km|ស្បែក|tr=sbaek|sc=Khmr}}, {{t|km|ស្បែកសត្វ|tr=sbaek sat|sc=Khmr}}
 * Korean: {{t+|ko|가죽}}
-{{trans-mid}}
 * Kyrgyz: {{t|ky|тери|sc=Cyrl}}
 * Lao: {{t|lo|ຫນັງ|sc=Laoo}}, {{t+|lo|ໜັງສັດ|sc=Laoo}}
+{{trans-mid}}
 * Latin: {{t|la|cutis|f}}
 * Latvian: {{t+|lv|āda|f}}
 * Lithuanian: {{t+|lt|oda|f}}
@@ -106,6 +106,7 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Slovene: {{t+|sl|usnje|n}}
 * Spanish: {{t+|es|cuero|m}}
 * Swedish: {{t+|sv|läder|n}}
+* Tagalog: {{t|tl|katad}}
 * Tajik: {{t|tg|чарм|sc=Cyrl}}
 * Tatar: {{t+|tt|күн|sc=Cyrl}}
 * Thai: {{t|th|หนัง|tr=năng}}
