t+io:[[muelilo]] ([[WT:EDIT|Assisted]]) <mill#35387475>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -110,6 +110,7 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}.
 * Hebrew: {{t|he|טחנה|tr=takhánah}}
 * Hindi: {{t|hi|चक्की|f|tr=cakkī}}
 * Hungarian: {{t+|hu|malom}}
+* Ido: {{t+|io|muelilo}}
 * Irish: {{t|ga|muileann|m}}
 * Italian: {{t+|it|mulino|m}}
 * Japanese: {{t|ja|製粉所|tr=せいふんじょ, seifunjo}}
