--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -31,7 +31,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Albanian: {{t|sq|ketër|m}}
 * Algonquin: {{t|alq|adjidamò}}
 * Arabic: {{t|ar|سِنْجَاب|m}}
-*: Hejazi: {{t|acw|سنجاب|m|tr=senjāb|sc=Arab}}
+*: Hijazi: {{t|acw|سنجاب|m|tr=sinjāb|sc=Arab}}
 * Aragonese: {{t|an|esquirgüelo|m}}
 * Armenian: {{t|hy|սկյուռ}}
 *: Old Armenian: {{t|xcl|սկիւռ}}
