===Noun=== {{en-noun|~}}  # A white, semihard [[cheese]] from Mexico. <Oaxaca#35391478>

--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -24,6 +24,11 @@
 {{trans-mid}}
 {{trans-bottom}}
 
+===Noun===
+{{en-noun|~}}
+
+# A white, semihard [[cheese]] from Mexico.
+
 [[Category:en:States of Mexico]]
 
 ----
