--- a/en/m/moonstone.720226.wikitext
+++ b/en/m/moonstone.720226.wikitext
@@ -24,6 +24,7 @@
 * Hungarian: {{t+|hu|holdkő}}
 * Italian: {{t|it|pietra di luna|f}}, {{t|it|lunaria|f}}
 * Japanese: {{t|ja|月長石|tr=げっちょうせき, gecchouseki|sc=Jpan}}
+* Kazakh: {{t|kk|айтас|sc=Cyrl}}
 * Portuguese: {{t|pt|pedra da Lua|f}}
 * Russian: {{t|ru|лу́нный ка́мень|m}}
 * Spanish: {{t|es|piedra de luna|f}}
