t+it:[[porco]] ([[WT:EDIT|Assisted]]) <pig#35408487>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -351,7 +351,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * German: {{t+|de|Schwein|n}}
 * Greek: {{t+|el|γουρούνι|n}}
 * Icelandic: {{t+|is|svín|n}}
-* Italian: {{t+|it|bastardo|m}}, {{t+|it|bastarda|f}}, {{t+|it|stronzo|m}}, {{t+|it|stronza|f}}
+* Italian: {{t+|it|bastardo|m}}, {{t+|it|bastarda|f}}, {{t+|it|stronzo|m}}, {{t+|it|stronza|f}}, {{t+|it|porco|m}}
 * Latvian: {{t+|lv|cūka|f}}
 {{trans-mid}}
 * Macedonian: {{t|mk|свиња|f}}
