[[User:Daniel Carrero/term cleanup|term cleanup]] <marled#35410961>

--- a/en/m/marled.746944.wikitext
+++ b/en/m/marled.746944.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology 1===
-From a contracted form of {{term|marble}} {{suffix||ed|lang=en}}.
+From a contracted form of {{m|en|marble}} {{suffix||ed|lang=en}}.
 
 ====Adjective====
 {{en-adj}}
