t+he:[[תורה]] t+he:[[תאוריה]] ([[WT:EDIT|Assisted]]) <theory#35433393>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -82,6 +82,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * German: {{t+|de|Theorie|f}}
 * Greek: {{t+|el|θεωρία|f}}
 * Haitian Creole: {{t|ht|teori}}
+* Hebrew: {{t+|he|תּוֹרָה|f|tr=torá}}, {{t|he|תֵּאוֹרְיָה|f|tr=teórya}}
 * Hungarian: {{t+|hu|elmélet}}
 * Indonesian: {{t+|id|teori}}
 * Irish: {{t|ga|teoiric|f}}
