--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -9,8 +9,8 @@
 ====Translations====
 {{trans-top|person skilled in metallurgy}}
 * Armenian: {{t|hy|մետաղագործ}}
-* Belarusian: {{t|be|металург|m|tr=metalúrh}}
-* Bulgarian: {{t|bg|металург|m|tr=metalúrg}}
+* Belarusian: {{t|be|металу́рг|m}}
+* Bulgarian: {{t|bg|металу́рг|m}}
 * Czech: {{t|cs|metalurg|m}}
 * Finnish: {{t+|fi|metallurgi}}
 * French: {{t+|fr|métallurgiste|m|f}}
@@ -21,7 +21,7 @@
 * Russian: {{t+|ru|металлу́рг|m}}
 * Spanish: {{t|es|metalúrgico|m|f}}, {{t|es|metalurgista|m}}
 * Swedish: {{t|sv|metallurg|c}}
-* Ukrainian: {{t|uk|металург|m|tr=metallúrh|sc=Cyrl}}
+* Ukrainian: {{t|uk|металу́рг|m}}
 * Volapük: {{qualifier|epicene}} {{t+|vo|metalavan}}, {{qualifier|male}} {{t|vo|himetalavan}}, {{qualifier|female}} {{t|vo|jimetalavan}}, {{qualifier|collective, epicene}} {{t|vo|metalavanef}}
 {{trans-bottom}}
 
