--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -25,6 +25,7 @@ From {{etyl|enm|en}} {{term|bidden|lang=enm}}, from the {{etyl|ang|en}} verb {{t
 
 =====Usage notes=====
 The inflected forms {{term|bade|lang=en}} and {{term|bidden|lang=en}} are archaic. They remain in marginal use, particularly regarding greetings, as in “bade farewell”, but uninflected '''bid''' is significantly more common, and {{term||bidden}} is especially rare.<ref>“[http://grammarist.com/usage/bid-bade-bidden/ Bid, bade, bidden]”, ''Grammarist''</ref>
+When '''bade''' is used in formal speech the pronunciation /bæd/ may be heard.  However, when a dated text is being read or recited (e.g. on stage, in school or in church etc.) /beɪd/ is quite usual.
 
 =====Derived terms=====
 * [[bid adieu]]
