/* Pronunciation */ +IPA <attend#35461469>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
 ===Pronunciation===
+* {{IPA|/əˈtɛnd/|lang=en}}
 * {{audio|en-us-attend.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɛnd|lang=en}}
 
