--- a/en/t/talk down.775561.wikitext
+++ b/en/t/talk down.775561.wikitext
@@ -5,7 +5,7 @@
 
 # {{context|idiomatic|lang=en}} To [[negotiate]] a [[lower]] price.
 #: ''If he offers a very high price, see if you can '''talk''' him '''down''' before you agree to anything.
-# {{vfd-sense}} {{context|flying|lang=en}} To tell an airplane passenger (who has had no flight training) step by step by two-way radio how to land the plane, e.g. if its pilot has become incapacitated while flying.
+# {{rfd-sense}} {{context|flying|lang=en}} To tell an airplane passenger (who has had no flight training) step by step by two-way radio how to land the plane, e.g. if its pilot has become incapacitated while flying.
 #: ''The Cessna's pilot had a heart attack while flying, and his non-flying passenger had to be talked down by Air Traffic Control.''
 # {{context|transitive|lang=en}} To convince a person to cease a drastic action or response, such as a suicide attempt or act of rage.
 #* 2007, [https://books.google.com/books?id=KmR6dmWMWeMC&pg=PT77&dq=talked+him+down&hl=en&sa=X&ei=cg2eVfTYDIzy-AGBvZC4BQ&ved=0CDsQ6AEwBQ ''Deep Storm''] by Lincoln Child
