t+fr:[[métallurge]] ([[WT:EDIT|Assisted]]) <metallurgist#35464225>

--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -13,7 +13,7 @@
 * Bulgarian: {{t|bg|металу́рг|m}}
 * Czech: {{t|cs|metalurg|m}}
 * Finnish: {{t+|fi|metallurgi}}
-* French: {{t+|fr|métallurgiste|m|f}}
+* French: {{t+|fr|métallurgiste|m|f}}, {{t+|fr|métallurge}}
 * German: {{t|de|Metallurg|m}}, {{t|de|Metallurge|m}}, {{t|de|Metallurgin|f}}
 {{trans-mid}}
 * Irish: {{t|ga|miotalóir|m}}
