--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -42,7 +42,7 @@ From {{etyl|enm|en}} {{m|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} 
 * Estonian: {{t|et|nugis}}
 * Faroese: {{t|fo|márur}}, {{t|fo|mørður|m}}
 * Finnish: {{t+|fi|näätä}}
-* French: {{t+|fr|marte|f=}}
+* French: {{t+|fr|marte|f}}
 * Friulian: {{t|fur|mardar}}, {{t|fur|martar}}
 * Galician: {{t|gl|marta|f}}
 * Georgian: {{t|ka|კვერნა|sc=Geor}}
