--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -38,10 +38,13 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 * Finnish: {{t+|fi|mania}}, {{t+|fi|vimma}}
 * French: {{t+|fr|manie|f}}
 * German: {{t+|de|Manie|f}}
-{{trans-mid}}
 * Greek: {{t+|el|μανία|f}}
+{{trans-mid}}
 * Italian: {{t+|it|mania|f}}
 * Japanese: {{t|ja|躁病|tr=そうびょう, sōbyō|sc=Jpan}}
+* Norwegian: 
+*: Bokmål: {{t|nb|mani|m}}
+*: Nynorsk: {{t|nn|mani|m}}
 * Portuguese: {{t|pt|insanidade|f}}
 * Romanian: {{t+|ro|mânie}}
 * Russian: {{t+|ru|ма́ния|f}}
@@ -55,9 +58,12 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 *: Mandarin: {{t|cmn|狂熱|sc=Hani}}, {{t+|cmn|狂热|tr=kuángrè|sc=Hani}}
 * Dutch: {{t+|nl|manie|f}}
 * Finnish: {{t+|fi|mania}}
-{{trans-mid}}
 * Greek: {{t+|el|μανία|f}}
+{{trans-mid}}
 * Italian: {{t+|it|mania|f}}
+* Norwegian: 
+*: Bokmål: {{t|nb|mani|m}}
+*: Nynorsk: {{t|nn|mani|m}}
 * Portuguese: {{t+|pt|mania|f}}
 * Spanish: {{t+|es|manía|f}}
 {{trans-bottom}}
