/* Verb */ <talk down#35468369>

--- a/en/t/talk down.775561.wikitext
+++ b/en/t/talk down.775561.wikitext
@@ -6,6 +6,13 @@
 # {{context|idiomatic|lang=en}} To [[negotiate]] a [[lower]] price.
 #: ''If he offers a very high price, see if you can '''talk''' him '''down''' before you agree to anything.
 # {{rfd-sense}} {{context|flying|lang=en}} To tell an airplane passenger (who has had no flight training) step by step by two-way radio how to land the plane, e.g. if its pilot has become incapacitated while flying.
+#*{{quote-magazine|year=1960
+|month=Feb
+|title=Business with FAA
+|page=109
+|magazine=Flying Magazine
+|passage=GET TALKED DOWN: When a pilot gets caught in weather, he may call the nearest tower for Ground Controlled Approach landing assistance, wherever the airport has GCA radar.
+}}
 #*{{quote-book|year=2000|author=Larry King
 |title=Anything Goes!: What I've Learned from Pundits, Politicians, and Presidents
 |isbn=0759520356
