--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia|dab=rot}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|rotten}}, {{m|enm|roten}}, from {{etyl|ang|en}} {{m|ang|rotian||to rot, become corrupted, ulcerate, putrefy}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*rutōną||to rot}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*reud-||to tear}}, from {{m|ine-pro|*reu-||to tear, dig, gather}}. Cognate with {{etyl|fy|-}} {{m|fy|rotsje||to rot}}, {{etyl|nl|-}} {{m|nl|rotten||to rot}}, {{etyl|de|-}} {{m|de|verrotten||to rot}} and regional {{m|de|rößen||to steep flax}}, {{etyl|is|-}} {{m|is|rotna||to rot}}. See {{l|en|rotten}}.
+From {{inh|en|enm|[[rotten]], [[roten]]}}, from {{inh|en|ang|rotian||to rot, become corrupted, ulcerate, putrefy}}, from {{inh|en|gem-pro|*rutōną||to rot}}, from {{inh|en|ine-pro|*reud-||to tear}}, from {{m|ine-pro|*reu-||to tear, dig, gather}}. Cognate with {{etyl|fy|-}} {{m|fy|rotsje||to rot}}, {{etyl|nl|-}} {{m|nl|rotten||to rot}}, {{etyl|de|-}} {{m|de|verrotten||to rot}} and regional {{m|de|rößen||to steep flax}}, {{etyl|is|-}} {{m|is|rotna||to rot}}. See {{l|en|rotten}}.
 
 ===Pronunciation===
 * {{a|GenAM}} {{IPA|[ɹɑt]|lang=en}}
@@ -47,7 +47,7 @@ From {{etyl|enm|en}} {{m|enm|rotten}}, {{m|enm|roten}}, from {{etyl|ang|en}} {{m
 * Finnish: {{t+|fi|mädäntyä}}
 * French: {{t+|fr|pourrir}}
 * Galician: {{t+|gl|podrecer}}
-* Georgian: {{t|ka|ლპობა|sc=Geor}}, {{t|ka|დალპობა|sc=Geor}}, {{t|ka|ჩალპობა|sc=Geor}}, {{t|ka|ხრწნა|sc=Geor}}
+* Georgian: {{t|ka|ლპობა}}, {{t|ka|დალპობა}}, {{t|ka|ჩალპობა}}, {{t|ka|ხრწნა}}
 * German: {{t|de|verrotten}}, {{t+|de|verderben}}
 * Greek: {{t+|el|σαπίζω}}
 {{trans-mid}}
@@ -85,8 +85,6 @@ From {{etyl|enm|en}} {{m|enm|rotten}}, {{m|enm|roten}}, from {{etyl|ang|en}} {{m
 
 ===Anagrams===
 * {{l|en|ort}}, {{l|en|OTR}}, {{l|en|RTO}}, {{l|en|TOR}}, {{l|en|Tor}}, {{l|en|tor}}, {{l|en|TRO}}
-
-[[Category:English intransitive verbs]]
 
 ----
 
@@ -176,7 +174,7 @@ From {{etyl|la|fr}} {{m|la|ructus}}.
 From {{etyl|la|fur}} {{m|la|ruptus}}.
 
 ===Adjective===
-{{head|fur|adjective}} (''feminine'' '''[[rote]]''')
+{{head|fur|adjective|feminine|rote}}
 
 # [[broken]]
 
@@ -200,7 +198,7 @@ From {{etyl|la|fur}} {{m|la|ruptus}}.
 * {{rhymes|oːt|lang=de}}
 
 ===Etymology===
-From {{etyl|gmh|de}} {{m|gmh|rōt||red, red-haired}}, from {{etyl|goh|de}} {{m|goh|rōt||red, scarlet, purple-red, brown-red, yellow-red}}, from {{etyl|gem-pro|de}} {{m|gem-pro|*raudaz}}, from {{etyl|ine-pro|de}} {{m|ine-pro|*h₁rowdʰós}}, from {{m|ine-pro|*h₁rewdʰ-}}. Compare {{etyl|nds|-}} {{m|nds|root}}, {{m|nds|rod}}, {{m|nds|rot}}, {{etyl|nl|-}} {{m|nl|rood}}, {{etyl|en|-}} {{m|en|red}}, {{etyl|fy|-}} {{m|fy|read}}, {{etyl|da|-}} {{m|da|rød}}.
+From {{inh|de|gmh|rōt||red, red-haired}}, from {{inh|de|goh|rōt||red, scarlet, purple-red, brown-red, yellow-red}}, from {{inh|de|gem-pro|*raudaz}}, from {{inh|de|ine-pro|*h₁rowdʰós}}, from {{m|ine-pro|*h₁rewdʰ-}}. Compare {{etyl|nds|-}} {{m|nds|root}}, {{m|nds|rod}}, {{m|nds|rot}}, {{etyl|nl|-}} {{m|nl|rood}}, {{etyl|en|-}} {{m|en|red}}, {{etyl|fy|-}} {{m|fy|read}}, {{etyl|da|-}} {{m|da|rød}}.
 
 ===Adjective===
 {{de-adj|röter|comp2=roter|rötesten|sup2=rotesten}}
@@ -223,20 +221,7 @@ From {{etyl|gmh|de}} {{m|gmh|rōt||red, red-haired}}, from {{etyl|goh|de}} {{m|g
 * {{sense|redskin}} {{l|de|rothäutig}}
 
 ====Derived terms====
-* [[feuerrot]]
-* [[Röte]]
-* [[röten]]
-* [[rot-grün]]
-* [[rothaarig]]
-* [[Rothaut]]
-* [[Rotkehlchen]]
-* [[rötlich]]
-* [[rot-rot]]
-* [[rot-rot-grün]]
-* [[rot sehen]]
-* [[Rotstift]]
-* [[Rötung]]
-* [[Rotwein]]
+{{der3|feuerrot|Röte|röten|rot-grün|rothaarig|Rothaut|Rotkehlchen|rötlich|rot-rot|rot-rot-grün|rot sehen|Rotstift|Rötung|Rotwein|lang=de}}
 
 ====Related terms====
 * [[Rot]]
@@ -309,7 +294,7 @@ From {{etyl|gmh|de}} {{m|gmh|rōt||red, red-haired}}, from {{etyl|goh|de}} {{m|g
 {{wikipedia|lang=no|rot (plantedel)}}
 
 ===Etymology 1===
-From {{etyl|non|nb}} {{m|non|rót}}, from {{etyl|gem-pro|nb}} {{m|gem-pro|*wrōts}}, from {{etyl|ine-pro|nb}} {{m|ine-pro|*wréh₂ds}}.
+From {{inh|nb|non|rót}}, from {{inh|nb|gem-pro|*wrōts}}, from {{inh|nb|ine-pro|*wréh₂ds}}.
 
 ====Noun====
 {{head|nb|noun|g=m|g2=f|definite singular|rota|or|roten|indefinite plural|røtter|definite plural|røttene}}
@@ -340,7 +325,7 @@ From {{etyl|non|nb}} {{m|non|rót}}, from {{etyl|gem-pro|nb}} {{m|gem-pro|*wrōt
 {{wikipedia|lang=nn|røter}}
 
 ===Etymology===
-From {{etyl|non|nn}} {{m|non|rót}}, from {{etyl|gem-pro|nn}} {{m|gem-pro|*wrōts}}, from {{etyl|ine-pro|nn}} {{m|ine-pro|*wréh₂ds}}.
+From {{inh|nn|non|rót}}, from {{inh|nn|gem-pro|*wrōts}}, from {{inh|nn|ine-pro|*wréh₂ds}}.
 
 ===Noun===
 {{head|nn|noun|g=f|definite singular|rota|indefinite plural|røter|definite plural|røtene}}
@@ -362,7 +347,7 @@ From {{etyl|non|nn}} {{m|non|rót}}, from {{etyl|gem-pro|nn}} {{m|gem-pro|*wrōt
 ==Old High German==
 
 ===Etymology===
-From {{inh|goh|gem-pro|*raudaz}} (compare {{etyl|osx|-}} {{m|osx|rōd}}, {{etyl|ang|-}} {{m|ang|rēad}}, {{etyl|non|-}} {{m|non|rauðr}}, {{etyl|got|-}} {{m|got|𐍂𐌰𐌿𐌸𐍃}}), from {{etyl|ine-pro|goh}} {{m|ine-pro|*h₁rowdʰós}}, from {{m|ine-pro|*h₁rewdʰ-}}.
+From {{inh|goh|gem-pro|*raudaz}} (compare {{etyl|osx|-}} {{m|osx|rōd}}, {{etyl|ang|-}} {{m|ang|rēad}}, {{etyl|non|-}} {{m|non|rauðr}}, {{etyl|got|-}} {{m|got|𐍂𐌰𐌿𐌸𐍃}}), from {{inh|goh|ine-pro|*h₁rowdʰós}}, from {{m|ine-pro|*h₁rewdʰ-}}.
 
 ===Adjective===
 {{head|goh|adjective|head=rōt}}
@@ -371,7 +356,7 @@ From {{inh|goh|gem-pro|*raudaz}} (compare {{etyl|osx|-}} {{m|osx|rōd}}, {{etyl|
 
 ====Descendants====
 * German: {{l|de|rot}}
-* Yiddish: {{l|yi|רויט|sc=Hebr|tr=royt}}
+* Yiddish: {{l|yi|רויט|sc=Hebr}}
 
 [[Category:goh:Colors]]
 
@@ -380,7 +365,7 @@ From {{inh|goh|gem-pro|*raudaz}} (compare {{etyl|osx|-}} {{m|osx|rōd}}, {{etyl|
 ==Swedish==
 
 ===Etymology===
-From {{etyl|non|sv}} {{m|non|rót}}, from {{etyl|gem-pro|sv}} {{m|gem-pro|*wrōts}}, from {{etyl|ine-pro|sv}} {{m|ine-pro|*wréh₂ds}}.
+From {{inh|sv|non|rót}}, from {{inh|sv|gem-pro|*wrōts}}, from {{inh|sv|ine-pro|*wréh₂ds}}.
 
 ===Pronunciation===
 * {{audio|Sv-en rot.ogg|audio|lang=sv}}
@@ -423,12 +408,12 @@ From {{etyl|non|sv}} {{m|non|rót}}, from {{etyl|gem-pro|sv}} {{m|gem-pro|*wrōt
 ==Tok Pisin==
 
 ===Etymology===
-From {{etyl|en|tpi}} {{m|en|road}}.
+From {{inh|tpi|en|road}}.
 
 ===Noun===
 {{head|tpi|noun}}
 
-# road, street
+# [[road]], [[street]]
 #* ''''2003''', Mühlhäusler et al., ''Tok Pisin texts'', John Benjamins Publishing Company, page 9:
 #*: ''Planti liklik '''rot''' i stap long ailan hia.''
 #*:: Many little roads exist on this island.
