t+de:[[faulen]] ([[WT:EDIT|Assisted]]) <rot#35471198>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -48,7 +48,7 @@ From {{inh|en|enm|[[rotten]], [[roten]]}}, from {{inh|en|ang|rotian||to rot, bec
 * French: {{t+|fr|pourrir}}
 * Galician: {{t+|gl|podrecer}}
 * Georgian: {{t|ka|ლპობა}}, {{t|ka|დალპობა}}, {{t|ka|ჩალპობა}}, {{t|ka|ხრწნა}}
-* German: {{t|de|verrotten}}, {{t+|de|verderben}}
+* German: {{t|de|verrotten}}, {{t+|de|verderben}}, {{t+|de|faulen}}
 * Greek: {{t+|el|σαπίζω}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|rohad}}, {{t+|hu|rothad}}
