/* Derived terms */ +syn <rot#35471201>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -27,6 +27,9 @@ From {{inh|en|enm|[[rotten]], [[roten]]}}, from {{inh|en|ang|rotian||to rot, bec
 #: ''to '''rot''' vegetable fiber''
 # {{context|transitive|lang=en}} To expose, as flax, to a process of [[maceration]], etc., for the purpose of separating the [[fiber]]; to [[ret]].
 
+====Synonyms====
+* [[putrefy]]
+
 ====Derived terms====
 * [[brown rot]]
 * [[potter's rot]]
