--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -203,9 +203,9 @@ Literally "beyond the river [[Dniester]]". {{etystub|lang=en}}
 ===Proper noun===
 {{es-proper noun|f}}
 
-# [[#English|Transnistria]]
+# {{place|pt|breakaway country|c/Moldova|t1=Transnistria}}
 
-[[Category:es:Place names]]
+{{catlangcode|es|Moldova|Transnistria}}
 
 [[cs:Transnistria]]
 [[fr:Transnistria]]
