--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -411,7 +411,7 @@ From {{etyl|sga|ga}} {{m|sga|att||swelling, protuberance, tumour}}.
 
 ===References===
 * {{R:ga:ODonaill}}
-* {{R:DIL|att}}
+* {{R:DIL|4925|head=att}}
 
 ----
 
