--- a/en/l/labourious.803568.wikitext
+++ b/en/l/labourious.803568.wikitext
@@ -2,10 +2,5 @@
 
 ===Adjective===
 {{head|en|adjective}}
-
-# {{lb|en|nonstandard}} {{alternative form of|from=UK|laborious|lang=en}}
-
-[[es:labourious]]
-[[my:labourious]]
-[[ro:labourious]]
+A big shit hole 
 [[zh:labourious]]
