t+hi:[[सीटी]] t-balance ([[WT:EDIT|Assisted]]) <whistle#35510728>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -114,10 +114,11 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * German: {{t+|de|Pfeifen|n}}
 * Greek: {{t+|el|σφύριγμα|n}}
 * Hebrew: {{t|he|שריקה|f|tr=sh'riká}}
+* Hindi: {{t|hi|सीटी|f|sc=Deva}}
 * Irish: {{t|ga|feadaíl|f}}
 * Japanese: {{t|ja|口笛|tr=くちぶえ, kuchibue}}
-* Korean: {{t+|ko|호루라기|sc=Kore}}
 {{trans-mid}}
+* Korean: {{t+|ko|호루라기|sc=Kore}}
 * Latvian: {{t|lv|svilpošana|f}}
 * Portuguese: {{t|pt|apitada|f}} {{qualifier|with a whistle}}, {{t|pt|assoviada}}, {{t|pt|assobiada}} {{qualifier|with one’s mouth}}
 * Russian: {{t+|ru|свист|m}}, {{t+|ru|свисто́к|m}}
@@ -144,6 +145,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Georgian: {{t|ka|სტვენა}}
 * German: {{t+|de|Pfeifen|n}}, {{t+|de|Pfiff|m}}
 * Greek: {{t+|el|σφύριγμα|n}}, {{t|el|σφυριξιά|f}}
+* Hindi: {{t|hi|सीटी|f|sc=Deva}}
 * Hungarian: {{t|hu|füttyszó}}
 * Italian: {{t+|it|fischio|m}}
 * Japanese: {{t|ja|口笛|tr=[[くちぶえ]], kuchibue}}
