/* English */ <better late than never#35515271>

--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4th book<ref>{{cite web|url=http://mcadams.posc.mu.edu/txt/ah/Livy/Livy04.html|title=Livy's History of Rome|accessdate=May 29, 2007|author=Butterfield, Bruce J.|date=1996|format=HTML|publisher=Marquette University ([http://mu.edu mu.edu])|language=English.}}</ref> of ''[[w:Ab Urbe condita (book)|Ab Urbe condita]]'' (''History of Rome'') by [[w:Livy|Titus Livius]], around 27 BC.
+Perhaps a calque of the Latin phrase ''[[potiusque sero quam numquam]]'' from the 4th book<ref>{{cite web|url=http://mcadams.posc.mu.edu/txt/ah/Livy/Livy04.html|title=Livy's History of Rome|accessdate=May 29, 2007|author=Butterfield, Bruce J.|date=1996|format=HTML|publisher=Marquette University ([http://mu.edu mu.edu])|language=English.}}</ref> of ''[[w:Ab Urbe condita (book)|Ab Urbe condita]]'' (''History of Rome'') by [[w:Livy|Titus Livius]], around 27 BC.
 
 ===Adverb===
 {{head|en|adverb|head=[[better]] [[late]] than [[never]]}}
