t+lo:[[ນາກ]] t+km:[[ភេ]] t-balance ([[WT:EDIT|Assisted]]) <otter#35517860>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -73,16 +73,18 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * Italian: {{t+|it|lontra|f}}
 * Japanese: {{qualifier|freshwater}} {{t+|ja|獺|tr=かわうそ, kawauso|sc=Jpan}}, {{t|ja|川獺|tr=かわうそ, kawauso|sc=Jpan}}, {{t+|ja|カワウソ|tr=kawauso|sc=Jpan}}, {{qualifier|marine}} {{t+|ja|海獺|tr=らっこ, rakko|sc=Jpan}}, {{t+|ja|ラッコ|tr=rakko|sc=Jpan}}
 * Kazakh: {{t|kk|кәмшат|sc=Cyrl}}, {{t|kk|қамшат|sc=Cyrl}}
+* Khmer: {{t+|km|ភេ|tr=pʰee|sc=Khmr}}
 * Korean: {{t+|ko|수달|sc=Kore}}
 * Kyrgyz: {{t|ky|кундуз|sc=Cyrl}}
 * Ladin: {{t|lld|lontra}}
+* Lao: {{t|lo|ນາກ|sc=Laoo}}
 * Latgalian: {{t|ltg|iudrys|m}}
 * Latin: {{t|la|lutra|f}}
 * Latvian: {{t|lv|ūdrs|m}}
 * Lithuanian: {{t+|lt|ūdra|f}}
 * Lun Bawang: {{t|lnd|dengen}}
-* Macedonian: {{t|mk|видра|f}}
 {{trans-mid}}
+* Macedonian: {{t|mk|видра|f}}
 * Malay:
 *: Rumi: {{t|ms|anjing air}}, {{t|ms|berang-berang}}
 *: Jawi: {{t|ms|انجيڠ اءير|sc=Arab}}, {{t|ms|برڠ٢|sc=Arab}}
