t+el:[[Νιντενδο]] ([[WT:EDIT|Assisted]]) <Nintendo#35525190>

--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -35,7 +35,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * French: {{t+|fr|Nintendo|f}}
 * German: {{t|de|Nintendo|f}}
 {{trans-mid}}
-* Greek: {{t|el|Νιντενδω}}
+* Greek: {{t|el|Νιντενδω}}, {{t|el|Νιντενδο}}
 * Hebrew: {{t|he|נינטנדו}}
 * Italian: {{t|it|Nintendo}}, {{t|it|Nintendo|f}}
 * Japanese: {{t|ja|任天堂|tr=Nintendō}}, {{t|ja|ニンテンドー|tr=Nintendō}}, {{t+|ja|ファミコン|tr=famikon}}
