t+da:[[Nintendo]] ([[WT:EDIT|Assisted]]) <Nintendo#35525209>

--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -31,6 +31,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Bengali: {{t|bn|নিনটেনডো|sc=Beng}}
 * Chinese:
 *: Mandarin: {{t+|cmn|任天堂|tr=Rèntiāntáng|sc=Hani}}
+* Danish: {{t|da|Nintendo}}
 * Dutch: {{t|nl|Nintendo}}
 * Esperanto: {{t|eo|Nintendo}}
 * Finnish: {{t|fi|Nintendo}}
