t+yue:[[任天堂]] ([[WT:EDIT|Assisted]]) <Nintendo#35525229>

--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -30,6 +30,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Arabic: {{t|ar|نينتندو}}
 * Bengali: {{t|bn|নিনটেনডো|sc=Beng}}
 * Chinese:
+*: Cantonese: {{t|yue|任天堂|tr=Jam1 tin1 tong4|sc=Hani}}
 *: Mandarin: {{t+|cmn|任天堂|tr=Rèntiāntáng|sc=Hani}}
 * Danish: {{t|da|Nintendo}}
 * Dutch: {{t|nl|Nintendo}}
